# myOpcuaProjects

./: CMakeLists.txt
opcua_modbus_server/: CMakeLists.txt
opcua_modbus_server/src/: CMakeLists.txt  main.c  modbus_operate.c  modbus_operate.h
opcua_modbus_server/src/include/open62541/: open62541.h
opcua_modbus_server/src/lib/: libmodbus.so.5.1.0  open62541.c
src/: CMakeLists.txt  main.c
src/PKI/: .README.swp
src/PKI/own/certs/: server_cert.der
src/PKI/own/private/: server_key.der
src/PKI/trusted/: uaexpert.der
src/include/open62541/: opcua_operate.h
src/include/sqlite3/: sqlite3_operate.h
src/lib/: opcua_operate.c  sqlite3_operate.c
src/tools/certs/: readme
